--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -2,19 +2,24 @@ FROM alpine:3.12.1 AS builder
 
 RUN apk add --no-cache bash git build-base pcre-dev linux-headers
 
-ARG DUMMY
-
-RUN cd /opt && git clone {{ beacon_node_repo_url }}
+RUN git config --global pull.rebase false
+RUN cd /opt && git clone https://github.com/status-im/nimbus-eth2
 
 WORKDIR /opt/nimbus-eth2
 
-RUN git config pull.rebase false \
- && git checkout -- . \
- && git checkout {{ beacon_node_repo_branch }} \
- && git pull
+RUN make update
+RUN make deps
 
-RUN make update \
- && make \
+# This is to force rebuild from this point.
+# We avoid re-doing most of `make update` and `make deps`.
+ARG DUMMY
+
+RUN git checkout .
+RUN git checkout devel
+RUN git pull
+
+RUN make update
+RUN make \
       LOG_LEVEL="TRACE" \
       MAKEFLAGS="-j2" \
       NIMFLAGS="-d:insecure -d:testnet_servers_image --parallelBuild:1" \
