support enabling --subscribe-all-subnets
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -30,6 +30,7 @@ services:
       --netkey-file=/{{ beacon_node_netkey_cont_path }}
       --slashing-db-kind={{ beacon_node_slashing_db_kind }}
       --insecure-netkey-password=true
+      --subscribe-all-subnets={{ beacon_node_subscribe_all | to_json }}
       --rpc
       --rpc-address=0.0.0.0
       --rpc-port={{ beacon_node_rpc_port }}
