Add a setting for specifying the --max-peers count

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -27,6 +27,7 @@ services:
       --log-level={{ beacon_node_log_level }}
       --tcp-port={{ beacon_node_listening_port }}
       --udp-port={{ beacon_node_discovery_port }}
+      --max-peers={{ beacon_node_max_peers }}
       --netkey-file=/{{ beacon_node_netkey_cont_path }}
       --slashing-db-kind={{ beacon_node_slashing_db_kind }}
       --insecure-netkey-password=true
