--- a/templates/rpc.sh.j2
+++ b/templates/rpc.sh.j2
@@ -25,7 +25,9 @@ PAYLOAD="{
   \"params\": [${PARAMS_STR}]
 }"
 
+# The jq script checks if error exists and adjusts exit code.
 curl -s -X POST \
     -H "Content-type:application/json" \
     --data "${PAYLOAD}" \
-    "${URL}" | jq .
+    "${URL}" | \
+     jq -e '., if .error != null then null|halt_error(1) else halt end'
