support multiple Web3 URLs with beacon_node_web3_urls
The first URL is the default, and the rest are fallbacks.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -22,7 +22,9 @@ services:
     command: |
       --network={{ beacon_node_network }}
       --data-dir='/data/{{ beacon_node_data_folder }}'
-      --web3-url={{ beacon_node_web3_url | mandatory }}
+{% for url in beacon_node_web3_urls | mandatory %}
+      --web3-url={{ url | mandatory }}
+{% endfor %}
       --nat=extip:{{ beacon_node_public_address }}
       --log-level={{ beacon_node_log_level }}
       --tcp-port={{ beacon_node_listening_port }}
